added sql dump file

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.rs2xml.jar=C:\\Users\\hp pc\\Downloads\\rs2xml.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\hp pc\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
